# ShapeSplat

./: .gitignore  README.md  agents.md  pyproject.toml  requirements.txt
configs/: minimal.yaml  (+25 more)
shapesplat_minimal/: .gitignore  README.md  pyproject.toml
shapesplat_minimal/configs/: benchmark_baseline.yaml  dataset_minimal.yaml  local_windows_rtx5090.yaml  minimal.yaml  my_local_backend.yaml  real_shape_bank.yaml
shapesplat_minimal/docs/: BACKENDS.md  BASELINES.md  COMMANDS.md  EXPERIMENTS.md  RUNBOOK.md  TROUBLESHOOTING.md
shapesplat_minimal/runs/: run_registry.jsonl
shapesplat_minimal/scripts/: cache_frontend_outputs.py  check_paper_ready.py  check_renderer_backend.py  check_shape_retrieval.py  create_example_dataset.py  create_stress_dataset.py  diagnose_metrics.py  evaluate_minimal.py  export_final_tables.py  finalize_run.py  generate_final_report.py  generate_report.py  list_presets.py  print_edit_table.py  run_ablation.py  run_comparison.py  run_dataset.py  run_edit_dataset.py  run_edit_demo.py  run_experiment.py  run_external_baseline.py  run_external_baseline_dataset.py  run_final_paper.py  run_minimal.py  run_ours_benchmark.py  run_paper_experiments.py  run_stress_benchmark.py  validate_frontend_cache.py
shapesplat_minimal/tests/: conftest.py  test_ablation.py  test_artifact_readiness.py  test_dataset_runner.py  test_evaluation.py  test_external_baseline_adapter.py  test_file_masks.py  test_orchestrator.py  test_paper_experiment_pack.py  test_real_3dgs_renderer_adapter.py  test_real_input.py  test_renderer_backend.py  test_shape_bank.py  test_smoke.py  (+1 more)
(+540 files in other folders)
