[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "shapesplat"
version = "0.1.0"
description = "ShapeSplat++ object-centric visible-hidden Gaussian reconstruction toolkit"
requires-python = ">=3.9"

[tool.setuptools.packages.find]
where = ["src"]
