[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "shapesplat-minimal"
version = "0.1.0"
description = "ShapeSplat++ minimal runnable single-image multi-object Gaussian reconstruction scaffold"
requires-python = ">=3.9"

[tool.setuptools.packages.find]
where = ["src"]
